Rename AI flag to auto_analyse
